src/test/06-Errors/error-op-overload-child-1.txt
error-op-overload-child-1.ck:3:20: error: binary operator '=>' already overloaded on types 'SinOsc' and 'SinOsc' (or their parents)...
[3] fun void @operator =>( SinOsc lhs, SinOsc rhs )
                       ^
